Cleans many bugs
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1497 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/general.yml
+++ b/config/locales/eng/general.yml
@@ -64,6 +64,7 @@ eng:
     display_help: 'Display help'
     down: 'Down'
     duplicate: 'Duplicate'
+    #>duration: '{{hours}}h {{minutes}}min'
     dyta:
       export:
         csv: 'CSV'
@@ -590,4 +591,3 @@ eng:
         #>sales: 'Ventes'
         #>stock_transfers: 'Transferts et pertes'
         #>stocks_tasks: 'Stocks'
-        #>tools: 'Outils'
