--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -1207,8 +1207,8 @@ eng:
         #>shape_id: 'Îlot'
         #>started_at: 'Du'
         #>stopped_at: 'Au'
-        #>target: 'Cible'
-        #>target_id: 'Cible'
+        #>target: 'Parcelle'
+        #>target_id: 'Parcelle'
         #>target_type: 'Type de cible'
         #>tool_uses: 'Utilisations d''outil'
         #>tools: 'Outils'
@@ -1216,6 +1216,7 @@ eng:
         updated_at: 'Updated at'
         updater: 'Updater'
         updater_id: 'Updater'
+        #>uses: '(((USES)))'
         #>validated: 'Effectué'
       operation_line:
         #>area_unit: 'Unité de surface'
@@ -2011,10 +2012,12 @@ eng:
         lock_version: 'Version'
         name: 'Name'
         #>nature: 'Nature'
+        #>remaining_duration: 'Durée d''utilisation prévue (heures)'
         #>text_nature: 'Nature'
         updated_at: 'Updated at'
         updater: 'Updater'
         updater_id: 'Updater'
+        #>usage_duration: 'Durée d''utilisation (heures)'
         #>uses: 'Utilisations d''outil'
       tool_use:
         company: 'Company'
