--- a/config/locales/eng/pack.management.yml
+++ b/config/locales/eng/pack.management.yml
@@ -445,13 +445,13 @@ eng:
         #>discount: 'Remise (en %)'
         #>give_discount: 'Octroyer une remise'
         #>infos: 'Choisissez le produit et la quantité'
+      _sale_order_line_informations:
+        #>no_tracking: 'Aucun lot'
+        #>tracking: 'Lot '
       sale_order_line_informations:
         #>contact: 'à l''adresse'
         #>from_date: 'Du '
         #>to_date: 'Au '
-      _sale_order_line_informations:
-        #>no_tracking: 'Aucun lot'
-        #>tracking: 'Lot '
       _sale_order_line_stocks:
         #>line_stock: 'Lieu de stockage: {{location}}, quantité disponible: {{virtual_q}}'
       _sale_order_line_tracking:
@@ -587,6 +587,8 @@ eng:
         #>unit: 'Unité'
         #>virtual_quantity: 'Quantité virtuelle'
         #>weight: 'Poids'
+      _subscription_coordinates_form:
+        #>coordinates: 'Coordonnées de l''abonnement'
       subscription_create:
         #>title: 'Création d''un abonnement'
       subscription_message:
@@ -603,17 +605,18 @@ eng:
         #>subscription_nature_create: 'Ajouter un type d''abonnement'
         #>title: 'Types d''abonnements'
       _subscription_options:
-        #>select_date: 'Entrez une date'
-        #>select_number: 'Entrez un numéro'
-        #>stop: 'Jusqu''au'
-        #>subscription_natures_down: 'Décrémenter le numéro actuel (-1)'
-        #>subscription_natures_up: 'Incrémenter le numéro actuel (+1)'
       subscription_update:
         #>title: 'Modification de l''abonnement : N°{{number}} du {{start}} au {{finish}}'
       subscriptions:
         #>select_number_or_date: 'Entrez un numéro ou une date'
         #>subscription_nature: 'Type d''abonnement'
         #>title: 'Abonnements'
+      _subscriptions_options:
+        #>select_date: 'Entrez une date'
+        #>select_number: 'Entrez un numéro'
+        #>stop: 'Jusqu''au'
+        #>subscription_natures_down: 'Décrémenter le numéro actuel (-1)'
+        #>subscription_natures_up: 'Incrémenter le numéro actuel (+1)'
       tracking:
         #>operations: 'Travaux'
         #>productions: 'Productions'
