--- a/config/locales/fra/pack.production.yml
+++ b/config/locales/fra/pack.production.yml
@@ -21,12 +21,10 @@ fra:
           zero: 'Aucun travail à réaliser'
         title: 'Gestion de la production'
       operation:
-        operation:  #!
-          lines: 'Intrants et sortants' #!
- #!
+        lines: 'Intrants et sortants'
         operation_update: 'Modifier le travail'
-        operations: 'Liste des travaux' #!
         title: 'Détails du travail {{name}}'
+        uses: 'Matériel'
       operation_create:
         title: 'Créer un nouveau travail'
       _operation_form:
@@ -35,7 +33,8 @@ fra:
         infos: 'Renseignez les caractéristiques du travail'
         out_line_create: 'Ajouter un produit sortant'
         products: 'Produits intrants et sortants'
-        tools: 'Sélectionnez le matériel utilisé'
+        tool_use_create: 'Ajouter un matériel'
+        tools: 'Matériel utilisé'
       operation_nature_create:
         title: 'Créer un nouveau type de travail'
       operation_nature_update:
@@ -66,15 +65,17 @@ fra:
         shapes: 'Îlots' #!
         title: 'Îlots'
       tool:
-        hour_duration: 
-          one: 'Temps d''utilisation total : 1 heure'
-          other: 'Temps d''utilisation total : {{count}} heures'
-          zero: ''
+        hour_duration:  #!
+          one: 'Temps d''utilisation total : 1 heure' #!
+          other: 'Temps d''utilisation total : {{count}} heures' #!
+          zero: '' #!
+ #!
         operations: 
           one: '1 travail'
           other: '{{count}} travaux'
           zero: 'Aucun travail'
-        title: 'Matériel {{name}}'
+        title: 'Matériel : {{name}}'
+        tool_update: 'Modifier le matériel'
       tool_create:
         title: 'Ajouter un matériel'
       tool_update:
