--- a/config/locales/jpn/activerecord.yml
+++ b/config/locales/jpn/activerecord.yml
@@ -1207,8 +1207,8 @@ jpn:
         #>shape_id: 'Îlot'
         #>started_at: 'Du'
         #>stopped_at: 'Au'
-        #>target: 'Cible'
-        #>target_id: 'Cible'
+        #>target: 'Parcelle'
+        #>target_id: 'Parcelle'
         #>target_type: 'Type de cible'
         #>tool_uses: 'Utilisations d''outil'
         #>tools: 'Outils'
@@ -1216,6 +1216,7 @@ jpn:
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
         updater_id: '修正の人'
+        #>uses: '(((USES)))'
         #>validated: 'Effectué'
       operation_line:
         #>area_unit: 'Unité de surface'
@@ -2011,10 +2012,12 @@ jpn:
         lock_version: '修正の番号'
         name: '名前'
         #>nature: 'Nature'
+        #>remaining_duration: 'Durée d''utilisation prévue (heures)'
         #>text_nature: 'Nature'
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
         updater_id: '修正の人'
+        #>usage_duration: 'Durée d''utilisation (heures)'
         #>uses: 'Utilisations d''outil'
       tool_use:
         company: '会社'
