--- a/config/locales/spa/activerecord.yml
+++ b/config/locales/spa/activerecord.yml
@@ -1207,8 +1207,8 @@ spa:
         #>shape_id: 'Îlot'
         #>started_at: 'Du'
         #>stopped_at: 'Au'
-        #>target: 'Cible'
-        #>target_id: 'Cible'
+        #>target: 'Parcelle'
+        #>target_id: 'Parcelle'
         #>target_type: 'Type de cible'
         #>tool_uses: 'Utilisations d''outil'
         #>tools: 'Outils'
@@ -1216,6 +1216,7 @@ spa:
         #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
+        #>uses: '(((USES)))'
         #>validated: 'Effectué'
       operation_line:
         #>area_unit: 'Unité de surface'
@@ -2011,10 +2012,12 @@ spa:
         #>lock_version: 'Version'
         name: 'Nombre'
         #>nature: 'Nature'
+        #>remaining_duration: 'Durée d''utilisation prévue (heures)'
         #>text_nature: 'Nature'
         #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
+        #>usage_duration: 'Durée d''utilisation (heures)'
         #>uses: 'Utilisations d''outil'
       tool_use:
         company: 'Compañía'
