Fixes menu translation bug
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1498 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/pack.accountancy.yml
+++ b/config/locales/fra/pack.accountancy.yml
@@ -49,7 +49,7 @@ fra:
           other: '{{count}} transferts enregistrés'
           zero: 'Aucun transfert enregistré'
         select_date_generation: 'Date limite d''intégration'
-        title: 'Comptabiliser les opérations commerciales'
+        title: 'Bascule comptable'
       accounts:
         account_create: 'Enregistrer un nouveau compte'
         title: 'Plan de comptes'
