Fixes some bugs and inconvenients
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1500 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/general.yml
+++ b/config/locales/fra/general.yml
@@ -389,6 +389,7 @@ fra:
       label:
         normal: 'Facture N°{{number}}'
         credit: 'Avoir N°{{number}}'
+      to_accountancy: '[{{number}}] {{detail}}'
     invoice_line:
       no_product: '[Pas de produit]'
     journal:
