--- a/config/locales/eng/general.yml
+++ b/config/locales/eng/general.yml
@@ -368,6 +368,7 @@ eng:
       label:
         #>credit: 'Avoir N°{{number}}'
         #>normal: 'Facture N°{{number}}'
+      #>to_accountancy: '[{{number}}] {{detail}}'
     invoice_line:
       #>no_product: '[Pas de produit]'
     journal:
