Add a table of futures events in Relations (#128)
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1503 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/pack.relations.yml
+++ b/config/locales/eng/pack.relations.yml
@@ -287,11 +287,12 @@ eng:
       _general_description_form:
         #>title: 'Description générale'
       index:
-        #>last_events: 'Derniers événements'
+        #>future_events: 'Futurs événements'
         nb_entities:
           #>one: '1 fiche client/fournisseur'
           #>other: '{{count}} fiches clients/fournisseurs'
           #>zero: 'Aucune fiche clients/fournisseurs'
+        #>recent_events: 'Derniers événements'
         #>title: 'Gestion des relations clients et fournisseurs'
       mandate_create:
         #>title: 'Créer une responsabilité'
