--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -779,8 +779,8 @@ eng:
         #>nature: 'Type'
         #>nature_id: 'Type'
         #>reason: 'Motif'
-        #>started_at: 'A débuté le'
-        #>started_sec: 'A débuté le (en secondes)'
+        #>started_at: 'Date et heure'
+        #>started_sec: 'Date et heure (en secondes)'
         updated_at: 'Updated at'
         updater: 'Updater'
         updater_id: 'Updater'
@@ -2122,7 +2122,7 @@ eng:
         updater: 'Updater'
         updater_id: 'Updater'
       user:
-        #>admin: 'Administrateur'
+        #>admin: 'Administrateur système'
         #>arrived_on: 'Arrivé le'
         #>clients: 'Clients'
         comment: 'Comment'
@@ -2147,6 +2147,7 @@ eng:
         #>first_name: 'Prénom'
         #>free_price: 'Prix libres'
         #>full_name: 'Nom complet'
+        #>future_events: '(((FUTURE_EVENTS)))'
         #>hashed_password: 'Mot de passe crypté'
         id: 'ID'
         #>language: 'Langue'
