--- a/config/locales/eng/general.yml
+++ b/config/locales/eng/general.yml
@@ -214,8 +214,8 @@ eng:
         #>price_list_name: 'Tarif normal'
         role:
           name:
-            #>admin: 'Administrateur'
-            #>public: 'Public'
+            #>admin: 'Gérant'
+            #>public: 'Public (sans droits)'
         #>sale_order_nature_name: 'Vente standard'
         #>sample_product_name: 'Produit Exemple'
         sequences:
