--- a/config/locales/fra/general.yml
+++ b/config/locales/fra/general.yml
@@ -242,8 +242,8 @@ fra:
         price_list_name: Tarif normal
         role:
           name:
-            admin: Administrateur
-            public: Public
+            admin: Gérant
+            public: Public (sans droits)
         sale_order_nature_name: Vente standard
         sample_product_name: Produit Exemple
         sequences:
