--- a/config/locales/fra/help/company-user_create.txt
+++ b/config/locales/fra/help/company-user_create.txt
@@ -2,12 +2,12 @@
 
 ===== Informations de base =====
 
-Pour créer un nouvel utilisateur, il vous suffit de renseigner les différents paramètres qui vous sont demandés. Certains sont obligatoires (encadrés en bleu) et d'autres sont facultatifs (encadrés en gris). La création ne s'effectue uniquement que si tous les champs obligatoires ont été correctement renseignés. En outre, vous pouvez vous **enregister automatiquement en tant qu'employé** (ce qui vous évitera cette opération dans le formulaire concerné du module **Ressource**). 
+Pour créer un nouvel utilisateur, il vous suffit de renseigner les différents paramètres qui vous sont demandés. Certains sont obligatoires (encadrés en bleu) et d'autres sont facultatifs (encadrés en gris). La création ne s'effectue uniquement que si tous les champs obligatoires ont été correctement renseignés.
 
 ===== Les droits =====
 
-**Les droits permettent d'autoriser ou non l'accès a certaines parties du logiciel à l'utilisateur.**
+!!! Les droits permettent d'autoriser ou non l'accès aux différentes parties du logiciel à l'utilisateur.
 
-**Le rôle** permet de **sélectioner automatiquement une liste de droits** pour l'utilisateur. Vous pouvez créer différents rôles. Par défaut, deux rôles vous sont crées, un donnant accès à l'intégralité du logiciel (administrateur), et un qui restreint l'accès seulement à l'acceuil du logiciel (public). 
-Si le champ **Admin est coché**, l'utilisateur aura **accès à l'intégralité du logiciel**.
+**Le rôle** permet de **sélectioner automatiquement une liste de droits** pour l'utilisateur. Vous pouvez créer différents rôles. Par défaut, deux rôles vous sont crées, un donnant accès à l'intégralité du logiciel (Gérant), et un qui restreint l'accès seulement à l'accueil du logiciel (Public). 
+!!! Si le champ **Administrateur système** est coché, l'utilisateur aura **accès à l'intégralité du logiciel**.
 
