--- a/config/locales/spa/activerecord.yml
+++ b/config/locales/spa/activerecord.yml
@@ -779,8 +779,8 @@ spa:
         #>nature: 'Type'
         #>nature_id: 'Type'
         #>reason: 'Motif'
-        #>started_at: 'A débuté le'
-        #>started_sec: 'A débuté le (en secondes)'
+        #>started_at: 'Date et heure'
+        #>started_sec: 'Date et heure (en secondes)'
         #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
@@ -2122,7 +2122,7 @@ spa:
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
       user:
-        #>admin: 'Administrateur'
+        #>admin: 'Administrateur système'
         #>arrived_on: 'Arrivé le'
         #>clients: 'Clients'
         #>comment: 'Commentaire'
@@ -2147,6 +2147,7 @@ spa:
         #>first_name: 'Prénom'
         #>free_price: 'Prix libres'
         #>full_name: 'Nom complet'
+        #>future_events: '(((FUTURE_EVENTS)))'
         #>hashed_password: 'Mot de passe crypté'
         #>id: 'ID'
         #>language: 'Langue'
