--- a/config/locales/eng/pack.authentication.yml
+++ b/config/locales/eng/pack.authentication.yml
@@ -20,25 +20,13 @@ eng:
         connect: 'Login'
         download_firefox: 'Download Mozilla Firefox...'
         locale: 'Language'
-        #>lost_login: 'Nom d''utilisateur oublié ?'
-        #>lost_password: 'Mot de passe oublié ?'
         no_javascript: 'Your web browser don''t support javascript. You need to activate it in order to use Ekylibre.'
         password: 'Password'
         register: 'Register a new company'
         title: 'Login'
         username: 'Username'
       register:
-        #>administrator: 'Administrateur'
-        #>company_name: 'Nom de votre société'
-        #>company_name_example: 'SARL Martin et Fils'
-        #>company_siren_example: '012345678'
-        #>load_demo_data: 'Charger des données de tests'
-        #>my_company: 'Saisissez les informations sur votre société'
-        #>my_self: 'Saisissez les informations vous concernant'
+        load_demo_data: 'Load demo data'
+        my_company: 'About your company'
+        my_self: 'About you'
         title: 'Register a company'
-        #>user_first_name_example: 'Jean'
-        #>user_last_name_example: 'MARTIN'
-        #>user_name_example: 'martinj'
-        #>user_name_info: 'C''est le nom que vous utiliserez pour rentrer dans Ekylibre'
-        #>user_password_confirmation_info: 'Vous devez ressaisir votre mot de passe pour éviter qu''un mot de passe érroné soit enregistré'
-        #>user_password_hint: 'Pour avoir mot de passe "solide", il faut utiliser au minimum des majuscules, des minuscules et des chiffres'
