--- a/config/locales/fra/pack.authentication.yml
+++ b/config/locales/fra/pack.authentication.yml
@@ -21,25 +21,19 @@ fra:
         connect: 'Entrer'
         download_firefox: 'Télécharger Mozilla Firefox...'
         locale: 'Langue'
-        lost_login: 'Nom d''utilisateur oublié ?' #!
-        lost_password: 'Mot de passe oublié ?' #!
         no_javascript: 'Votre navigateur ne supporte pas le javascript. Vous devez l''activer pour pouvoir utiliser le logiciel. Merci de votre compréhension.'
         password: 'Mot de passe'
         register: 'Créer une nouvelle société'
         title: 'Connexion'
         username: 'Nom d''utilisateur'
       register:
-        administrator: 'Administrateur' #!
-        company_name: 'Nom de votre société' #!
-        company_name_example: 'SARL Martin et Fils'
-        company_siren_example: '012345678' #!
         load_demo_data: 'Charger des données de tests'
         my_company: 'Saisissez les informations sur votre société'
         my_self: 'Saisissez les informations vous concernant'
         title: 'Enregistrer sa société'
-        user_first_name_example: 'Jean'
-        user_last_name_example: 'MARTIN' #!
-        user_name_example: 'martinj'
-        user_name_info: 'C''est le nom que vous utiliserez pour rentrer dans Ekylibre'
-        user_password_confirmation_info: 'Vous devez ressaisir votre mot de passe pour éviter qu''un mot de passe érroné soit enregistré'
-        user_password_hint: 'Pour avoir mot de passe "solide", il faut utiliser au minimum des majuscules, des minuscules et des chiffres'
+        #>company_name_example: # Potentially missing translation
+        #>user_first_name_example: # Potentially missing translation
+        #>user_name_example: # Potentially missing translation
+        #>user_name_info: # Potentially missing translation
+        #>user_password_hint: # Potentially missing translation
+        #>user_password_confirmation_info: # Potentially missing translation
