--- a/config/locales/fra/pack.management.yml
+++ b/config/locales/fra/pack.management.yml
@@ -275,12 +275,12 @@ fra:
         embanked: 'Encaissés' #!
         search: 'Rechercher des règlements'
         waiting: 'Échéances' #!
+      _price_amount_form:
+        title: 'Tarif'
       price_create:
         title: 'Ajout d''un nouveau prix'
       _price_form:
         general: 'Général'
-      _price_amount_form:
-        title: Tarif
       prices:
         all: 'Tous les prix' #!
         client: 'Les prix de vente' #!
@@ -635,13 +635,13 @@ fra:
       transport_create:
         title: 'Ajout d''un nouveau transport'
         #>info: # Potentially missing translation
+      transport_deliveries:
+        title: 'Livraisons du transport'
       _transport_deliveries:
         add: 'Ajouter la livraison au transport'
         add_delivery: 'Ajouter une livraison'
         back: 'Valider et revenir à la liste des transports'
         delivery: 'Livraison'
-      transport_deliveries:
-        title: 'Livraisons du transport'
       _transport_form:
         info: 'Renseignez les informations du transport'
       transport_update:
