--- a/config/locales/jpn/pack.management.yml
+++ b/config/locales/jpn/pack.management.yml
@@ -273,11 +273,12 @@ jpn:
         #>embanked: 'Encaissés'
         #>search: 'Rechercher des règlements'
         #>waiting: 'Échéances'
+      _price_amount_form:
+        #>title: 'Tarif'
       price_create:
         #>title: 'Ajout d''un nouveau prix'
       _price_form:
         #>general: 'Général'
-        #>taxes: 'Taxes'
       price_lists:
       price_lists_create:
       price_lists_display:
@@ -332,7 +333,7 @@ jpn:
         #>purchase_price_create: 'Créer un prix d''achat'
         #>sale_price_create: 'Créer un prix de vente'
       product_update:
-        #>title: 'Modification du produit : {{value}}'
+        #>title: 'Modification du produit : {{name}}'
       products:
         nb_products:
           #>one: '1 produit enregistré'
@@ -634,13 +635,13 @@ jpn:
         #>title: 'Transport du {{value}}'
       transport_create:
         #>title: 'Ajout d''un nouveau transport'
-      transport_deliveries:
-        #>title: 'Livraisons du transport'
       _transport_deliveries:
         #>add: 'Ajouter la livraison au transport'
         #>add_delivery: 'Ajouter une livraison'
         #>back: 'Valider et revenir à la liste des transports'
         #>delivery: 'Livraison'
+      transport_deliveries:
+        #>title: 'Livraisons du transport'
       _transport_form:
         #>info: 'Renseignez les informations du transport'
       transport_update:
