Fixes the data importation (#131)
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1508 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/spa/notifications.yml
+++ b/config/locales/spa/notifications.yml
@@ -3,7 +3,7 @@ spa:
     #>access_denied: 'Vous n''avez pas le droit d''accéder à cette page. {{reason}} ({{url}})'
     #>accountizing_is_finished: 'La bascule en comptabilité est finie.'
     #>accountizing_works_only_with_sales_invoices: 'La bascule en comptabilité ne peut se faire actuellement que pour les factures de vente.'
-    #>bad_file: '(((BAD_FILE)))'
+    #>bad_file: 'Le fichier ne semble pas correspondre.'
     #>cannot_delete_entity: 'Il n''est pas possible de supprimer cette fiche car elle possède un historique comptable'
     #>cannot_delete_entity_nature: 'Vous ne pouvez pas supprimer ce type de fiche, il est rattaché à une ou plusieurs fiches'
     #>cannot_delete_journal: 'Ce journal contient des écritures et ne peut donc être effacé.'
@@ -17,10 +17,11 @@ spa:
     #>expired_session: 'Session expirée. Veuillez vous reconnecter.'
     #>fails_to_extract_listing: 'L''extraction n''a pas pu s''effectuer : {{message}}'
     #>import_succeeded: 'Vos données ont été correctement importées '
+    #>importation_cancelled: 'Vos données n''ont été pas été importées. L''importation a été annulée'
     #>importation_finished: 'L''importation est terminée.'
     #>impossible_to_add_lines: 'Vous ne pouvez plus ajouter de produits à votre vente, le devis est passé en commande'
     #>impossible_to_add_lines_to_purchase: 'Vous ne pouvez plus ajouter de produits à votre achat'
-    #>invalid_file_nature: '(((INVALID_FILE_NATURE)))'
+    #>invalid_file_nature: 'Type de fichier invalide'
     #>journal_closed_on: 'Le {{journal}} a été clôturé au {{closed_on}} correctement.'
     #>journal_record_has_been_saved: 'La pièce N°{{number}} a été enregistrée correctement'
     #>journal_reopened_on: 'Le {{journal}} a été déclôturé au {{closed_on}} correctement.'
