Add balance export in document_print
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1514 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/pack.management.yml
+++ b/config/locales/eng/pack.management.yml
@@ -105,15 +105,26 @@ eng:
         #>title: 'Délais'
       delivery_create:
         #>title: 'Ajouter une livraison'
+      _delivery_form:
+        #>amount: 'Total de la livraison HT'
+        #>amount_with_taxes: 'Total de la livraison TTC'
+        #>infos: 'Renseignez les caractéristiques de la livraison'
+        #>line_amount: 'PU HT'
+        #>line_amount_with_taxes: 'PU TTC'
+        #>product: 'Produit'
+        #>quantity: 'Quantité'
+        #>quantity_rest: 'Quantité restante'
+        #>total_quantity: 'Quantité totale'
+        #>unit: 'Unité'
       delivery_mode_create:
         #>title: 'Ajout d''un nouveau type de livraison'
       delivery_mode_update:
         #>title: 'Modification du type de livraison : {{name}}'
       delivery_modes:
         #>title: 'Types de livraison'
-      _delivery_update:
-        #>title: 'Modification de la livraison'
       delivery_update:
+        #>title: 'Modification de la livraison'
+      _delivery_update:
         #>title: 'Modification de la livraison'
       embankment:
         #>amount: 'Montant total'
@@ -425,16 +436,6 @@ eng:
         #>title: 'Livraisons'
         #>undelivered: 'Reste à livrer'
       _sale_order_delivery_form:
-        #>amount: 'Total de la livraison HT'
-        #>amount_with_taxes: 'Total de la livraison TTC'
-        #>infos: 'Renseignez les caractéristiques de la livraison'
-        #>line_amount: 'PU HT'
-        #>line_amount_with_taxes: 'PU TTC'
-        #>product: 'Produit'
-        #>quantity: 'Quantité'
-        #>quantity_rest: 'Quantité restante'
-        #>total_quantity: 'Quantité totale'
-        #>unit: 'Unité'
       _sale_order_form:
         #>client: 'Sélection du client'
         #>conditions: 'Conditions de vente'
