--- a/config/locales/jpn/pack.management.yml
+++ b/config/locales/jpn/pack.management.yml
@@ -105,15 +105,26 @@ jpn:
         #>title: 'Délais'
       delivery_create:
         #>title: 'Ajouter une livraison'
+      _delivery_form:
+        #>amount: 'Total de la livraison HT'
+        #>amount_with_taxes: 'Total de la livraison TTC'
+        #>infos: 'Renseignez les caractéristiques de la livraison'
+        #>line_amount: 'PU HT'
+        #>line_amount_with_taxes: 'PU TTC'
+        #>product: 'Produit'
+        #>quantity: 'Quantité'
+        #>quantity_rest: 'Quantité restante'
+        #>total_quantity: 'Quantité totale'
+        #>unit: 'Unité'
       delivery_mode_create:
         #>title: 'Ajout d''un nouveau type de livraison'
       delivery_mode_update:
         #>title: 'Modification du type de livraison : {{name}}'
       delivery_modes:
         #>title: 'Types de livraison'
-      _delivery_update:
-        #>title: 'Modification de la livraison'
       delivery_update:
+        #>title: 'Modification de la livraison'
+      _delivery_update:
         #>title: 'Modification de la livraison'
       embankment:
         #>amount: 'Montant total'
@@ -430,16 +441,6 @@ jpn:
         #>title: 'Livraisons'
         #>undelivered: 'Reste à livrer'
       _sale_order_delivery_form:
-        #>amount: 'Total de la livraison HT'
-        #>amount_with_taxes: 'Total de la livraison TTC'
-        #>infos: 'Renseignez les caractéristiques de la livraison'
-        #>line_amount: 'PU HT'
-        #>line_amount_with_taxes: 'PU TTC'
-        #>product: 'Produit'
-        #>quantity: 'Quantité'
-        #>quantity_rest: 'Quantité restante'
-        #>total_quantity: 'Quantité totale'
-        #>unit: 'Unité'
       _sale_order_form:
         #>client: 'Sélection du client'
         #>conditions: 'Conditions de vente'
@@ -635,13 +636,13 @@ jpn:
         #>title: 'Transport du {{value}}'
       transport_create:
         #>title: 'Ajout d''un nouveau transport'
+      transport_deliveries:
+        #>title: 'Livraisons du transport'
       _transport_deliveries:
         #>add: 'Ajouter la livraison au transport'
         #>add_delivery: 'Ajouter une livraison'
         #>back: 'Valider et revenir à la liste des transports'
         #>delivery: 'Livraison'
-      transport_deliveries:
-        #>title: 'Livraisons du transport'
       _transport_form:
         #>info: 'Renseignez les informations du transport'
       transport_update:
