Finishes to clean help work and fixes 2 bugs on entities_import
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1515 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -166,6 +166,7 @@ eng:
         creator_id: 'Creator'
         #>currencies: 'Devises'
         #>current_financialyear: 'Exercice comptable en cours'
+        #>default_currency: '(((DEFAULT_CURRENCY)))'
         #>delays: 'Délais'
         deleted: 'Deleted'
         #>deliveries: 'Livraisons'
@@ -1315,6 +1316,7 @@ eng:
         #>paid_on: 'Réglé le'
         #>parts: 'Parties de réglement'
         #>parts_amount: 'Montant utilisé'
+        #>payer: '(((PAYER)))'
         #>purchase_orders: 'Achats'
         #>received: 'Reçu'
         #>sale_orders: 'Ventes'
