--- a/config/locales/eng/notifications.yml
+++ b/config/locales/eng/notifications.yml
@@ -5,8 +5,6 @@ eng:
     #>accountizing_works_only_with_sales_invoices: 'La bascule en comptabilité ne peut se faire actuellement que pour les factures de vente.'
     #>bad_file: 'Le fichier ne semble pas correspondre.'
     #>cannot_delete_entity: 'Il n''est pas possible de supprimer cette fiche car elle possède un historique comptable'
-    #>cannot_delete_entity_nature: 'Vous ne pouvez pas supprimer ce type de fiche, il est rattaché à une ou plusieurs fiches'
-    #>cannot_delete_journal: 'Ce journal contient des écritures et ne peut donc être effacé.'
     #>cannot_merge_an_entity_with_itself: 'Il n''est pas possible de fusionner une fiche avec elle-même'
     #>cannot_merge_entities: 'Une erreur est survenue. Il n''est pas possible de fusionner ces fiches.'
     #>changes_have_been_reflected: 'Les changements ont été correctement répercutés sur l''état des stocks actuel'
@@ -30,29 +28,23 @@ eng:
     #>need_balanced_journal_to_tax_declaration: 'Tous vos journaux doivent être clôturés et équilibrés à cette date.'
     #>need_bank_account_to_record_statements: 'Vous devez avoir au moins créer un compte bancaire pour pouvoir saisir un relevé de compte.'
     #>need_closed_financialyear_to_declaration: 'Vous devez avoir un exercice clôturé pour créer une déclaration de TVA.'
-    #>need_company_code_to_login: 'Vous devez saisir votre nom d''utilisateur accompagné de votre code société. Exemple : SOCIETE\jean'
-    #>need_entries_to_letter: 'Vous devez avoir des écritures verrouillées enregistrées au compte client et fournisseur.'
+    #>need_company_code_to_login: 'Vous devez sélectionner votre société pour pouvoir vous connecter avec ce nom d''utilisateur'
     #>need_entries_to_point: 'Aucune écriture n''a été trouvé pour la période du relevé bancaire.'
-    #>need_financialyear_to_consult_record_entries: 'Vous devez avoir un exercice ouvert pour pouvoir consulter des écritures.'
-    #>need_journal_to_consult_record_entries: 'Vous devez créer un journal pour pouvoir consulter des écritures à l''intérieur.'
     #>need_journal_to_record_tax_declaration: 'Vous devez avoir au moins un journal des opérations diverses et un journal de vente ou d''achat pour pouvoir enregistrer des déclarations de taxes.'
     #>need_location_to_create_purchase_order_line: 'Vous devez créer un lieu de stockage pour pouvoir réaliser un achat'
     #>need_location_to_create_sale_order_line: 'Vous devez créer un lieu de stockage pour pouvoir réaliser une vente'
     #>need_location_to_record_stock_moves: 'Pour pouvoir gérer vos stocks vous devez enregistrer vos lieux de stockage.'
     #>need_payment_mode_to_create_embankment: 'Vous devez spécifier un mode de réglement pour effectuer une remise en banque'
-    #>need_product_to_create_price: 'Pour pouvoir ajouter un prix, il vous faut d''abord enregistrer un produit à tarifer.'
     #>need_quantities_to_cancel_an_invoice: 'Vous devez spécifier une quantité pour pouvoir faire un avoir'
     #>need_stocks_location_to_create_products: 'Vous devez créer un lieu de stockage pour pouvoir créer un produit'
     #>need_stocks_to_create_inventories: 'Vous devez gérer les stocks d''au moins un produit pour pouvoir faire un inventaire'
     #>need_to_create_subscription_nature: 'Vous devez créer un type d''abonnement pour pouvoir gérer vos abonnements'
     #>new_actual_number: 'Le nouveau numéro en cours est {{actual_number}}'
-    #>next_illegal_period_financialyear: 'Le prochain exercice ne démarre pas directement après.'
     #>no_authenticated: 'Vous n''avez pas pu être identifié. Le nom d''utilisateur ou le mot de passe doit être incorrect.'
     #>no_balance_template: 'Pas de modèle de document pour la balance'
     #>no_closable_financialyear: 'Vous n''avez aucun exercice à clôturer.'
     #>no_closable_journal: 'Vous ne pouvez pas clôturer ce journal.'
     #>no_embankable_payments: 'Il n''y a pas de réglements à remettre en banque'
-    #>no_entries_pointable_for_bank_account: 'Ce compte bancaire ne contient aucune écriture à pointer.'
     #>no_existing_mandates: 'Il n''y a pas de responsabilités enregistrées pour l''instant'
     #>no_financialyear: 'Aucun exercice enregistré'
     #>no_lines_found: 'Aucun pruduit n''a été ajouté à la commande '
