--- a/config/locales/spa/activerecord.yml
+++ b/config/locales/spa/activerecord.yml
@@ -166,6 +166,7 @@ spa:
         #>creator_id: 'Créateur'
         #>currencies: 'Devises'
         #>current_financialyear: 'Exercice comptable en cours'
+        #>default_currency: '(((DEFAULT_CURRENCY)))'
         #>delays: 'Délais'
         #>deleted: 'Effacé'
         #>deliveries: 'Livraisons'
@@ -1315,6 +1316,7 @@ spa:
         #>paid_on: 'Réglé le'
         #>parts: 'Parties de réglement'
         #>parts_amount: 'Montant utilisé'
+        #>payer: '(((PAYER)))'
         #>purchase_orders: 'Achats'
         #>received: 'Reçu'
         #>sale_orders: 'Ventes'
