fixes lot of bug due to column renaming
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1519 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/general.yml
+++ b/config/locales/fra/general.yml
@@ -193,7 +193,7 @@ fra:
               to_archive: true
               filename: 'Facture [number]'
             inventory:
-              filename: 'Inventaire du [date]'
+              filename: 'Inventaire du [created_on]'
             transport:
               filename: 'Transport du [created_on]'
             embankment:
@@ -439,7 +439,7 @@ fra:
         in: Intrant
         out: Sortant
     payment_mode:
-      modes:
+      natures:
         card: 'Carte Bleue'
         cash: 'Espèces'
         check: Chèque
